--- a/chat.css
+++ b/chat.css
@@ -57,9 +57,10 @@ div{
 
 /* 201223 전은주 btn3는 쳇팅창 위에 차단,신고 드랍박스 기능 */
 #btn3{   
-padding: 10px 30px;
+padding: 10px;
 font-size: 10px;
-height: 50px;
+height: 40px;
+width: 40px;
 background-color: black;
 color: white;
 float: right;
@@ -69,7 +70,7 @@ outline: none;
 position: absolute;
 z-index: 1;
 top: 50px;
-margin-left: 550px;
+margin-left: 305px;
 background-color: gray;
 }
 #drop-content a{
@@ -78,7 +79,7 @@ font-size: 15px;
 background-color: gray;
 color: white;
 text-decoration: none;
-padding: 5px 45px 30px ;
+padding: 5px 30px 30px ;
 }
 
 /* 홍석주 */
@@ -126,8 +127,35 @@ padding: 5px 45px 30px ;
     outline: none;
     border-top: 0;
 }
-.ment-display-input{
-    /* height: 40px;
-    background-color: rgb(199, 196, 196);
-    width: 400px; */
+/* 20201224 전은주 체팅내용 테이블 */
+#chat-table{
+    width: 100%;  
+    background-color: white;
+    color: black;
+}
+#chat-table1{
+    width: 100px;
+    border-radius: 50%;
+    background-color: gray;
+}
+#chat-table2{
+    height:20px;
+    width: 100px;
+    font-size: 15px;
+    text-align: center;
+}
+#chat-table3{
+    height:20px;
+    width: 550px;
+    font-size: 15px;
+    text-align: center;
+}
+#chat-table4{
+    float: right;
+    height: 50px;
+    width: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 50px;
+    text-align: center;
 }
